correcting overlap issues with fixed navbar

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -53,6 +53,10 @@ html body {
   color: var(--alt);
 }
 
+.box {
+  margin-top: 5em;
+}
+
 h3 {
   color: var(--beacon);
 }
